Revert "Merge pull request #121 from otavio-alencar/test/cobertura"
This reverts commit 06f37a34e0f534697fba473e7c327f7c7bf37bda, reversing
changes made to 2ae568506c3bb29eda9332f0a844ab093e24c497.